Updated two letter behavior.